<resources>
    <string name="app_name">LoginAndCarpark</string>
    <string name="carPark">Car Parking</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="empty">Empty</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="your">Your Info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="name">name</string>
    <string name="carId">car id</string>
    <string name="brand">brand</string>
    <string name="noLogin">Username or Password is not match!</string>
    <string name="busy">Busy</string>
</resources>
