<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="buu.informatics.s59161081.loginandcarpark.LoginFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/carImage3"
        android:layout_width="151dp"
        android:layout_height="118dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/car" />

    <TextView
        android:id="@+id/carParking3"
        android:layout_width="134dp"
        android:layout_height="48dp"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/baloo_bhai"
        android:text="@string/carPark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/carImage3" />

    <EditText
        android:id="@+id/usernameEditText2"
        android:layout_width="294dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/baloo_bhai"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carParking3" />

    <EditText
        android:id="@+id/passwordEditText2"
        android:layout_width="294dp"
        android:layout_height="58dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/baloo_bhai"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText2" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="167dp"
        android:layout_height="54dp"
        android:layout_marginTop="44dp"
        android:background="@color/colorPink"
        android:fontFamily="@font/baloo_bhai"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText2" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>