<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="buu.informatics.s59161081.loginandcarpark.RoomFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/carImage2"
            android:layout_width="151dp"
            android:layout_height="118dp"
            android:layout_marginTop="48dp"
            android:contentDescription="TODO"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/car" />

        <TextView
            android:id="@+id/carParking2"
            android:layout_width="134dp"
            android:layout_height="48dp"
            android:layout_marginTop="108dp"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/carPark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/carImage2" />

        <TextView
            android:id="@+id/roomButton2"
            android:layout_width="97dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorBlue"
            android:fontFamily="@font/baloo_bhai"
            android:paddingTop="@dimen/paddingTop"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/roomButton3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/roomButton1"
            app:layout_constraintTop_toBottomOf="@+id/carParking2" />

        <TextView
            android:id="@+id/roomButton3"
            android:layout_width="97dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorBlue"
            android:fontFamily="@font/baloo_bhai"
            android:paddingTop="@dimen/paddingTop"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/roomButton2"
            app:layout_constraintTop_toBottomOf="@+id/carParking2" />

        <TextView
            android:id="@+id/roomButton1"
            android:layout_width="97dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorBlue"
            android:fontFamily="@font/baloo_bhai"
            android:paddingTop="@dimen/paddingTop"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/roomButton2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carParking2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="366dp"
            android:layout_height="349dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomButton2" />

        <TextView
            android:id="@+id/roomText"
            android:layout_width="129dp"
            android:layout_height="46dp"
            android:fontFamily="@font/baloo_bhai"
            android:text="Room 1"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/nameEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomButton2" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="241dp"
            android:layout_height="49dp"
            android:ems="10"
            android:fontFamily="@font/baloo"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/black"
            android:textColorLink="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/caridEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomText" />

        <EditText
            android:id="@+id/brandEditText"
            android:layout_width="241dp"
            android:layout_height="49dp"
            android:ems="10"
            android:fontFamily="@font/baloo"
            android:hint="@string/brand"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/black"
            android:textColorLink="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/deleteButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/caridEditText" />

        <EditText
            android:id="@+id/caridEditText"
            android:layout_width="241dp"
            android:layout_height="49dp"
            android:ems="10"
            android:fontFamily="@font/baloo"
            android:hint="@string/carId"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/black"
            android:textColorLink="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/brandEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="110dp"
            android:layout_height="53dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="296dp"
            android:background="@color/colorDelet"
            android:text="@string/delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomButton1" />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="110dp"
            android:layout_height="53dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="296dp"
            android:layout_marginEnd="72dp"
            android:background="@color/colorUpdate"
            android:text="@string/update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/deleteButton"
            app:layout_constraintTop_toBottomOf="@+id/roomButton3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>